Fix: vertical-align: middle on 2-column layouts

--- a/static/reveal.js-4.1.0/css/theme/finn.css
+++ b/static/reveal.js-4.1.0/css/theme/finn.css
@@ -151,7 +151,7 @@ body {
   width: calc(50% - 1em);
   display: inline-block;
   margin: 0;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 /*********************************************
